RC2: Match symbol qualification and doc cleanup